; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/jbd/extr_replay.c___blist_del_buffer.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/jbd/extr_replay.c___blist_del_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.journal_head = type { %struct.TYPE_2__*, %struct.journal_head* }
%struct.TYPE_2__ = type { %struct.journal_head* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.journal_head**, %struct.journal_head*)* @__blist_del_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__blist_del_buffer(%struct.journal_head** %0, %struct.journal_head* %1) #0 {
  %3 = alloca %struct.journal_head**, align 8
  %4 = alloca %struct.journal_head*, align 8
  store %struct.journal_head** %0, %struct.journal_head*** %3, align 8
  store %struct.journal_head* %1, %struct.journal_head** %4, align 8
  %5 = load %struct.journal_head**, %struct.journal_head*** %3, align 8
  %6 = load %struct.journal_head*, %struct.journal_head** %5, align 8
  %7 = load %struct.journal_head*, %struct.journal_head** %4, align 8
  %8 = icmp eq %struct.journal_head* %6, %7
  br i1 %8, label %9, label %21

9:                                                ; preds = %2
  %10 = load %struct.journal_head*, %struct.journal_head** %4, align 8
  %11 = getelementptr inbounds %struct.journal_head, %struct.journal_head* %10, i32 0, i32 1
  %12 = load %struct.journal_head*, %struct.journal_head** %11, align 8
  %13 = load %struct.journal_head**, %struct.journal_head*** %3, align 8
  store %struct.journal_head* %12, %struct.journal_head** %13, align 8
  %14 = load %struct.journal_head**, %struct.journal_head*** %3, align 8
  %15 = load %struct.journal_head*, %struct.journal_head** %14, align 8
  %16 = load %struct.journal_head*, %struct.journal_head** %4, align 8
  %17 = icmp eq %struct.journal_head* %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %9
  %19 = load %struct.journal_head**, %struct.journal_head*** %3, align 8
  store %struct.journal_head* null, %struct.journal_head** %19, align 8
  br label %20

20:                                               ; preds = %18, %9
  br label %21

21:                                               ; preds = %20, %2
  %22 = load %struct.journal_head*, %struct.journal_head** %4, align 8
  %23 = getelementptr inbounds %struct.journal_head, %struct.journal_head* %22, i32 0, i32 1
  %24 = load %struct.journal_head*, %struct.journal_head** %23, align 8
  %25 = load %struct.journal_head*, %struct.journal_head** %4, align 8
  %26 = getelementptr inbounds %struct.journal_head, %struct.journal_head* %25, i32 0, i32 0
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  store %struct.journal_head* %24, %struct.journal_head** %28, align 8
  %29 = load %struct.journal_head*, %struct.journal_head** %4, align 8
  %30 = getelementptr inbounds %struct.journal_head, %struct.journal_head* %29, i32 0, i32 0
  %31 = load %struct.TYPE_2__*, %struct.TYPE_2__** %30, align 8
  %32 = load %struct.journal_head*, %struct.journal_head** %4, align 8
  %33 = getelementptr inbounds %struct.journal_head, %struct.journal_head* %32, i32 0, i32 1
  %34 = load %struct.journal_head*, %struct.journal_head** %33, align 8
  %35 = getelementptr inbounds %struct.journal_head, %struct.journal_head* %34, i32 0, i32 0
  store %struct.TYPE_2__* %31, %struct.TYPE_2__** %35, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
